--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <textarea id="console-output" rows="10" cols="80"></textarea>
   <textarea id="console-log" rows="10" cols="80"></textarea>
   <button id="execute">Execute</button>
-
+  <button id="clear">Clear</button>
 </body>
 
 </html>
