--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       </div>
     </form>
   </div>
+  <iframe align="center" width="100%" height="90%" src="http://amazon.co.uk" frameborder=yes scrolling="yes"
+    name="myIframe" id="myIframe"> </iframe>
   <!-- create console to insert js -->
   <textarea id="console" rows="10" cols="80"></textarea>
   <textarea id="console-output" rows="10" cols="80"></textarea>
