--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <textarea id="console-log" rows="10" cols="80"></textarea>
   <button id="execute">Execute</button>
   <button id="clear">Clear</button>
-  <div id="redirect">Go to google</div>
+  <button id="redirect">Go to google</div>
 </body>
 
 </html>
