--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <link rel="stylesheet" href="browser.css">
   <script src="browser.js"></script>
+  <!-- manifest -->
+  <link rel="manifest" href="manifest.json">
 
 <body>
   <div id="controls">
@@ -17,8 +19,8 @@
       </div>
     </form>
   </div>
-  <iframe align="center" width="100%" height="90%" src="http://amazon.co.uk" frameborder=yes scrolling="yes"
-    name="myIframe" id="myIframe"> </iframe>
+  <iframe id="if1" width="100%" height="254" style="visibility:visible"
+    src="http://www.google.com/custom?q=&btnG=Search"></iframe>
   <!-- create console to insert js -->
   <textarea id="console" rows="10" cols="80"></textarea>
   <textarea id="console-output" rows="10" cols="80"></textarea>
