--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
       </div>
     </form>
   </div>
-  <iframe id="if1" width="100%" height="254" style="visibility:visible"
-    src="http://www.google.com/custom?q=&btnG=Search"></iframe>
+  <!-- <iframe id="if1" width="100%" height="254" style="visibility:visible"
+    src="http://www.google.com/custom?q=&btnG=Search"></iframe> -->
   <!-- create console to insert js -->
   <textarea id="console" rows="10" cols="80"></textarea>
   <textarea id="console-output" rows="10" cols="80"></textarea>
   <textarea id="console-log" rows="10" cols="80"></textarea>
   <button id="execute">Execute</button>
   <button id="clear">Clear</button>
-  <button id="redirect">Go to google</button>
 </body>
 
 </html>
