chore: update iframe

--- a/index.html
+++ b/index.html
@@ -2,31 +2,30 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="browser.css">
-  <script src="browser.js"></script>
-  <!-- manifest -->
-  <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="browser.css">
+    <!-- <script src="browser.js"></script> -->
+    <!-- manifest -->
+    <link rel="manifest" href="manifest.json">
 
 <body>
-  <div id="controls">
-    <button id="back" title="Go Back">&#9664;</button>
-    <button id="forward" title="Go Forward">&#9654;</button>
-    <button id="home" title="Go Home">&#8962;</button>
-    <button id="reload" title="Reload">&#10227;</button>
-    <button id="reset">Log Off</button>
-    <form id="location-form">
-      <div id="center-column">
-      </div>
-    </form>
-  </div>
-  <!-- <iframe id="if1" width="100%" height="254" style="visibility:visible"
-    src="http://www.google.com/custom?q=&btnG=Search"></iframe> -->
-  <!-- create console to insert js -->
-  <textarea id="console" rows="10" cols="80"></textarea>
-  <textarea id="console-output" rows="10" cols="80"></textarea>
-  <textarea id="console-log" rows="10" cols="80"></textarea>
-  <button id="execute">Execute</button>
-  <button id="clear">Clear</button>
+    <div id="controls">
+        <button id="back" title="Go Back">&#9664;</button>
+        <button id="forward" title="Go Forward">&#9654;</button>
+        <button id="home" title="Go Home">&#8962;</button>
+        <button id="reload" title="Reload">&#10227;</button>
+        <button id="reset">Log Off</button>
+        <form id="location-form">
+            <div id="center-column">
+            </div>
+        </form>
+    </div>
+    <iframe id="if1" width="100%" height="254" style="visibility:visible" src="https://www.google.com"></iframe>
+    <!-- create console to insert js -->
+    <!-- <textarea id="console" rows="10" cols="80"></textarea>
+    <textarea id="console-output" rows="10" cols="80"></textarea>
+    <textarea id="console-log" rows="10" cols="80"></textarea>
+    <button id="execute">Execute</button>
+    <button id="clear">Clear</button> -->
 </body>
 
 </html>
